# Meva-Beta-Alpha-Codex

./: .env.example  .env.pilot.example  .gitignore  AUDIT_REPORT.md  BTCTURK_TECHNICAL_AUDIT_2026-02-17.md  CALL_GRAPH_DATA_FLOW_REPORT.md  Dockerfile  INTRO_MAP.md  Makefile  PRODUCTION_ARCHITECTURE_PLAN.md  README.md  RELEASE_NOTE.md  REPOSITORY_INDEX_MAP.md  REPO_INVENTORY_AUDIT_2026-02-17.md  REPO_INVENTORY_REPORT.md  TECHNICAL_AUDIT_REPORT.md  btcbot_state.db  check_exchangeinfo.py  constraints.txt  docker-compose.yml  pyproject.toml
data/: README.md
docs/: ARCHITECTURE.md  BTCTURK_ADAPTER_AUDIT.md  DECISION_LAYER_AUDIT.md  GUARDED_LIVE_RUNBOOK.md  LEDGER_INCREMENTAL_REDUCER.md  OPERATIONS.md  RISK_SIGNALS.md  RUNBOOK.md  SLO.md  STAGES.md  TEST_QUALITY_GATES_AUDIT.md  THREAT_MODEL.md  agent_loop_tool_call_contract.md  btcbot-code-map.md  btcbot-production-repo-structure.md  btcturk_spot_agent_architecture.md  btcturk_technical_map.md  dry_run_protocol.md  p2_2_state_store_mapping.md  phase5_ops.md  phase6_ledger_reporting.md  pilot_live.md  planning_kernel_refactor.md  project_intake_spec_freeze.md  python_repo_architecture_spec.md  replace_atomicity.md  stage4.md  stage6_2_metrics_and_atomicity.md  stage6_3_risk_budget.md  stage6_4_degrade_and_anomalies.md  stage6_ledger.md  stage7.md  threat_model_failure_modes.md
scripts/: capture_exchangeinfo_fixture.py  debug_stage7_metrics.py  debug_stage7_schema.py  dev.ps1  guard_multiline.py
tests/: conftest.py  test_account_snapshot_service.py  test_accounting_stage3.py  test_action_to_order_mapping.py  test_adaptation_apply_and_rollback.py  test_adaptation_bounds.py  test_adaptation_proposals.py  test_agent_audit.py  test_agent_guardrails.py  test_agent_policy.py  test_alert_engine_stage4.py  test_allocation_service.py  test_backtest_data_gaps.py  test_backtest_parity_pipeline.py  test_backtest_replay_determinism.py  test_btcturk_auth.py  test_cli.py  (+106 more)
(+177 files in other folders)
