[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btcbot"
version = "0.1.0"
description = "BTCTurk spot portfolio bot - Stage 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "tenacity>=8.5.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
]

[project.scripts]
btcbot = "btcbot.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff==0.14.11",
  "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
