[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btcbot"
version = "0.1.0"
description = "BTCTurk spot portfolio bot - Stage 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx==0.28.1",
  "pydantic==2.11.7",
  "pydantic-settings==2.11.0",
  "tenacity==9.1.2",
  "python-dotenv==1.1.1",
  "rich==14.1.0",
  "opentelemetry-api==1.36.0",
  "opentelemetry-sdk==1.36.0",
  "opentelemetry-exporter-otlp==1.36.0",
  "opentelemetry-exporter-prometheus==0.57b0",
  "prometheus-client==0.22.1",
]

[project.scripts]
btcbot = "btcbot.cli:main"

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "ruff==0.14.11",
  "mypy==1.17.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
